@@ -1,8 +1,6 @@
 ﻿namespace Battlefield
 {
     using System;
-    using System.Collections.Generic;
-    using System.Linq;
 
     public class BattlefieldApp
     {
